patches-lsp/tree-sitter-patches/test/corpus/errors.txt
================================================================================
Error recovery: unclosed brace
================================================================================

patch {
    module osc : Osc { frequency: 440Hz

--------------------------------------------------------------------------------

(file
  (ERROR
    (ident)
    (ident)
    (param_entry
      (ident)
      (value
        (scalar
          (float_unit))))))

================================================================================
Error recovery: missing arrow in connection
================================================================================

patch {
    module osc : Osc
    module out : AudioOut
    osc.sine out.in_left
}

--------------------------------------------------------------------------------

(file
  (patch
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (connection
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))
        (arrow
          (forward_arrow
            (MISSING "->")))
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))))))

================================================================================
Error recovery: incomplete module declaration
================================================================================

patch {
    module osc :
    module out : AudioOut
}

--------------------------------------------------------------------------------

(file
  (ERROR
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (module_ident
      (ident))
    (ident)))
