patches-lsp/tree-sitter-patches/test/corpus/tap_targets.txt
================================================================================
Tap target: simple
================================================================================

patch {
    module osc : Osc
    osc.out -> ~meter(level)
}

--------------------------------------------------------------------------------

(file
  (patch
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (connection
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))
        (arrow
          (forward_arrow))
        (cable_endpoint
          (tap_target
            (tap_components
              (tap_component
                (ident)))
            (ident)))))))

================================================================================
Tap target: compound
================================================================================

patch {
    module mix : Mix
    mix.out -> ~meter+spectrum+osc(out)
}

--------------------------------------------------------------------------------

(file
  (patch
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (connection
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))
        (arrow
          (forward_arrow))
        (cable_endpoint
          (tap_target
            (tap_components
              (tap_component
                (ident))
              (tap_component
                (ident))
              (tap_component
                (ident)))
            (ident)))))))

================================================================================
Tap target: trigger LED
================================================================================

patch {
    module clk : Clock
    clk.tick -> ~trigger_led(beat)
}

--------------------------------------------------------------------------------

(file
  (patch
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (connection
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))
        (arrow
          (forward_arrow))
        (cable_endpoint
          (tap_target
            (tap_components
              (tap_component
                (ident)))
            (ident)))))))

================================================================================
Tap target: with cable gain
================================================================================

patch {
    module f : Filter
    f.out -[0.3]-> ~meter(level)
}

--------------------------------------------------------------------------------

(file
  (patch
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (connection
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))
        (arrow
          (forward_arrow
            (scale_val
              (scale_endpoint
                (scale_num)))))
        (cable_endpoint
          (tap_target
            (tap_components
              (tap_component
                (ident)))
            (ident)))))))

================================================================================
Tap target: error recovery — unknown component
================================================================================

patch {
    module o : Osc
    o.out -> ~bogus(name)
    module x : Y
}

--------------------------------------------------------------------------------

(file
  (patch
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (connection
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))
        (arrow
          (forward_arrow))
        (cable_endpoint
          (tap_target
            (tap_components
              (tap_component
                (ident)))
            (ident)))))
    (statement
      (module_decl
        name: (ident)
        type: (ident)))))

================================================================================
Tap target: error recovery — unclosed parens
================================================================================

patch {
    module o : Osc
    o.out -> ~meter(level
    module x : Y
}

--------------------------------------------------------------------------------

(file
  (patch
    (statement
      (module_decl
        name: (ident)
        type: (ident)))
    (statement
      (connection
        (cable_endpoint
          (port_ref
            (module_ident
              (ident))
            (port_label
              (ident))))
        (arrow
          (forward_arrow))
        (cable_endpoint
          (tap_target
            (tap_components
              (tap_component
                (ident)))
            (ident)
            (MISSING ")")))))
    (statement
      (module_decl
        name: (ident)
        type: (ident)))))
